fix: change the layout of the main page, hero content aligned to the center

--- a/frontend/src/components/Home/index.css
+++ b/frontend/src/components/Home/index.css
@@ -18,6 +18,10 @@
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
 }
 
+.hero-content{
+    text-align: center;
+}
+
 .heading {
     font-size: clamp(1.2rem, 8vw, 2.5rem);
     /* scales with screen */
